--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,9 @@
             </activation>
             <modules>
                 <module>main</module> 
+                <module>v1_8_R3</module>
+                <module>v1_12_R1</module>
+                <module>v1_16_R3</module>
                 <module>v1_19_R3</module>
                 <module>v1_20_R4</module>
                 <module>v1_21_R1</module>
