--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,10 @@
     </properties>
     <distributionManagement>
         <repository>
+            <id>spigot-repo</id>
+            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+        </repository>
+        <repository>
             <id>citizens-repo</id>
             <url>https://maven.citizensnpcs.co/repo</url>
         </repository>
