--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,10 @@
         </repository>
     </distributionManagement>
     <repositories>
+	    <repository>
+		    <id>CodeMC</id>
+			<url>https://repo.codemc.org/repository/maven-public/</url>
+		</repository>
         <repository>
             <id>spigot-repo</id>
             <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
