--- a/v1_8_R3/pom.xml
+++ b/v1_8_R3/pom.xml
@@ -1,4 +1,3 @@
-<!-- Citizens build file -->
 <project xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -14,6 +13,7 @@
         <craftbukkit.version>1.8.8-R0.1-SNAPSHOT</craftbukkit.version>
     </properties>
     <dependencies>
+        <!-- Citizens main dependency -->
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>citizens-main</artifactId>
@@ -21,14 +21,17 @@
             <type>jar</type>
             <scope>provided</scope>
         </dependency>
+
+        <!-- Use local craftbukkit jar -->
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>craftbukkit</artifactId>
             <version>${craftbukkit.version}</version>
-            <type>jar</type>
-            <scope>provided</scope>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/craftbukkit-${craftbukkit.version}.jar</systemPath>
         </dependency>
     </dependencies>
+
     <build>
         <defaultGoal>clean package install</defaultGoal>
         <sourceDirectory>${basedir}/src/main/java</sourceDirectory>
