--- a/v1_12_R1/pom.xml
+++ b/v1_12_R1/pom.xml
@@ -14,6 +14,7 @@
         <craftbukkit.version>1.12.2-R0.1-SNAPSHOT</craftbukkit.version>
     </properties>
     <dependencies>
+        <!-- Citizens main dependency -->
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>citizens-main</artifactId>
@@ -21,14 +22,19 @@
             <type>jar</type>
             <scope>provided</scope>
         </dependency>
+
+        <!-- Use local craftbukkit jar -->
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>craftbukkit</artifactId>
             <version>${craftbukkit.version}</version>
-            <type>jar</type>
-            <scope>provided</scope>
+            <!--type>jar</type>
+            <scope>provided</scope-->
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/craftbukkit-${craftbukkit.version}.jar</systemPath>
         </dependency>
     </dependencies>
+
     <build>
         <defaultGoal>clean package install</defaultGoal>
         <sourceDirectory>${basedir}/src/main/java</sourceDirectory>
