--- a/v1_8_R3/pom.xml
+++ b/v1_8_R3/pom.xml
@@ -1,3 +1,4 @@
+<!-- Citizens build file -->
 <project xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -27,6 +28,8 @@
             <groupId>org.bukkit</groupId>
             <artifactId>craftbukkit</artifactId>
             <version>${craftbukkit.version}</version>
+            <!--type>jar</type>
+            <scope>provided</scope-->
             <scope>system</scope>
             <systemPath>${project.basedir}/libs/craftbukkit-${craftbukkit.version}.jar</systemPath>
         </dependency>
