--- a/v1_16_R3/pom.xml
+++ b/v1_16_R3/pom.xml
@@ -1,5 +1,7 @@
 <!-- Citizens build file -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>net.citizensnpcs</groupId>
@@ -9,7 +11,7 @@
     <artifactId>citizens-v1_16_R3</artifactId>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <craftbukkit.version>1.16.5-R0.1-SNAPSHOT</craftbukkit.version>
+        <craftbukkit.version>1.16.5</craftbukkit.version>
     </properties>
     <dependencies>
         <dependency>
