--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -20,9 +20,11 @@ jobs:
         run: |
           mkdir -p v1_8_R3/libs
           mkdir -p v1_12_R1/libs
+          mkdir -p v1_16_R3/libs
           # Manually downloading or placing the CraftBukkit jars for both 1.8.8 and 1.12.2 versions
           wget https://cdn.getbukkit.org/craftbukkit/craftbukkit-1.8.8-R0.1-SNAPSHOT-latest.jar -O ./v1_8_R3/libs/craftbukkit-1.8.8-R0.1-SNAPSHOT.jar
           wget https://cdn.getbukkit.org/craftbukkit/craftbukkit-1.12.2.jar -O ./v1_12_R1/libs/craftbukkit-1.12.2-R0.1-SNAPSHOT.jar
+          wget https://cdn.getbukkit.org/spigot/spigot-1.16.5.jar -O ./v1_16_R3/libs/spigot-1.16.5-R0.1-SNAPSHOT.jar
 
       - name: Build
         run: mvn -V -B clean package --file pom.xml
