--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
                 <module>v1_8_R3</module>
                 <module>v1_12_R1</module>
                 <module>v1_16_R3</module>
+                <module>v1_20_R4</module>
                 <module>dist</module>
             </modules>
         </profile>
