--- a/main/pom.xml
+++ b/main/pom.xml
@@ -11,7 +11,7 @@
     <artifactId>citizens-main</artifactId>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <craftbukkit.version>1.20.6-R0.1-SNAPSHOT</craftbukkit.version>
+        <craftbukkit.version>1.16.5-R0.1-SNAPSHOT</craftbukkit.version>
         <placeholderapi.version>2.11.5</placeholderapi.version>
         <citizensapi.version>${project.version}</citizensapi.version>
         <worldguard.version>7.1.0-SNAPSHOT</worldguard.version>
@@ -50,8 +50,10 @@
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot</artifactId>
             <version>${craftbukkit.version}</version>
-            <type>jar</type>
-            <scope>provided</scope>
+            <!--type>jar</type>
+            <scope>provided</scope-->
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/spigot-${craftbukkit.version}.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>it.unimi.dsi</groupId>
