--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -30,6 +30,7 @@ jobs:
           wget https://cdn.getbukkit.org/spigot/spigot-1.16.5.jar -O ./v1_16_R3/libs/spigot-1.16.5-R0.1-SNAPSHOT.jar
 
       - name: Build
+        #run: mvn -V -B clean package --file pom.xml
         run: mvn clean package
 
       - name: Upload artifacts
