--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -10,21 +10,22 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up JDK 17
+      - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
-          java-version: 17
+          java-version: 21
           distribution: temurin
 
       - name: Create libs directory and add CraftBukkit jars
         run: |
-          #mkdir -p main/libs
+          mkdir -p main/libs
           mkdir -p v1_8_R3/libs
           mkdir -p v1_12_R1/libs
           mkdir -p v1_16_R3/libs
           # Manually downloading or placing the CraftBukkit jars for 1.8.8/1.12.2/1.16.5 versions
           #wget https://cdn.getbukkit.org/spigot/spigot-1.16.5.jar -O ./main/libs/spigot-1.16.5-R0.1-SNAPSHOT.jar
           #wget https://download.getbukkit.org/spigot/spigot-1.20.6.jar -O ./main/libs/spigot-1.20.6-R0.1-SNAPSHOT.jar
+          wget https://media.w1ck3dworks.org/mc/server/spigot-1.21.1-R0.1-SNAPSHOT-bootstrap.jar -O ./main/libs/spigot-1.21.1-R0.1-SNAPSHOT.jar
           wget https://cdn.getbukkit.org/craftbukkit/craftbukkit-1.8.8-R0.1-SNAPSHOT-latest.jar -O ./v1_8_R3/libs/craftbukkit-1.8.8-R0.1-SNAPSHOT.jar
           wget https://cdn.getbukkit.org/craftbukkit/craftbukkit-1.12.2.jar -O ./v1_12_R1/libs/craftbukkit-1.12.2-R0.1-SNAPSHOT.jar
           wget https://cdn.getbukkit.org/spigot/spigot-1.16.5.jar -O ./v1_16_R3/libs/spigot-1.16.5-R0.1-SNAPSHOT.jar
